--- a/APP/templates/page_blog.html
+++ b/APP/templates/page_blog.html
@@ -81,7 +81,7 @@
          </a>
          {% endif %}
          {% if user.is_authenticated %}
-         <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Login" data-target="#login-form" data-toggle="modal" href="{% url 'APP:profile' %}">
+         <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1"  href="{% url 'APP:profile' %}">
           Profile
          </a>
          {% else %}
@@ -293,7 +293,7 @@
        </a>
        {% endif %}
        {% if user.is_authenticated %}
-       <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1"  href="profile">
+       <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1"  href="{% url 'APP:profile' %}">
         Profile
        </a>
        {% else %}
@@ -485,72 +485,36 @@
         </h2>
        </div>
        <div class="widget-content">
+         {% for item in dealers %}
         <div class="agent-box media">
          <div class="media-left">
-          <a class="agent-box-image image-hoveffect-zoom" href="page_profile.html">
-           <img alt="" src="{% static 'assets/img/placeholders/125x125.png' %}"/>
-          </a>
+           {% if item.image %}
+           <a class="agent-box-image image-hoveffect-zoom" href="{{dealer.get_absolute_url}}">
+            <img alt="" src="{{item.image.url}}"/>
+           </a>
+           {% else %}
+           <a class="agent-box-image image-hoveffect-zoom" href="{{dealer.get_absolute_url}}">
+            <img alt="" src="{% static 'assets/img/placeholders/125x125.png' %}"/>
+           </a>
+           {% endif %}
          </div>
          <div class="media-right">
           <h3 class="title">
-           <a href="page_profile.html">
-            Ketty Springs (6)
+           <a href="{{item.get_absolute_url}}">
+            {{item.title}}
            </a>
           </h3>
           <span class="number">
-           +385 (0)91 123 321
+           {{item.phone}}
           </span>
           <span class="mail">
            <a href="mailto:kety@website.com">
-            kety@website.com
+          {{item.website}}
            </a>
           </span>
          </div>
         </div>
-        <div class="agent-box media">
-         <div class="media-left">
-          <a class="agent-box-image image-hoveffect-zoom" href="page_profile.html">
-           <img alt="" src="{% static 'assets/img/placeholders/125x125.png' %}"/>
-          </a>
-         </div>
-         <div class="media-right">
-          <h3 class="title">
-           <a href="page_profile.html">
-            Pero Peric (4)
-           </a>
-          </h3>
-          <span class="number">
-           +385 (0)91 123 321
-          </span>
-          <span class="mail">
-           <a href="mailto:kety@website.com">
-            pero@website.com
-           </a>
-          </span>
-         </div>
-        </div>
-        <div class="agent-box media">
-         <div class="media-left">
-          <a class="agent-box-image image-hoveffect-zoom" href="page_profile.html">
-           <img alt="" src="{% static 'assets/img/placeholders/125x125.png' %}"/>
-          </a>
-         </div>
-         <div class="media-right">
-          <h3 class="title">
-           <a href="page_profile.html">
-            Lazo Biskup (3)
-           </a>
-          </h3>
-          <span class="number">
-           +385 (0)91 123 321
-          </span>
-          <span class="mail">
-           <a href="mailto:kety@website.com">
-            lazo@website.com
-           </a>
-          </span>
-         </div>
-        </div>
+        {% endfor %}
        </div>
       </div>
       <!-- /. agents-list -->
