--- a/APP/templates/cars.html
+++ b/APP/templates/cars.html
@@ -81,7 +81,7 @@
        </a>
        {% endif %}
        {% if user.is_authenticated %}
-       <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Login" data-target="#login-form" data-toggle="modal" href="{% url 'APP:profile' %}">
+       <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1"  href="{% url 'APP:profile' %}">
         Profile
        </a>
        {% else %}
@@ -293,7 +293,7 @@
      </a>
      {% endif %}
      {% if user.is_authenticated %}
-     <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1"  href="profile">
+     <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1"  href="{% url 'APP:profile' %}">
       Profile
      </a>
      {% else %}
