--- a/APP/templates/page_profile.html
+++ b/APP/templates/page_profile.html
@@ -297,9 +297,6 @@
         Profile
        </a>
        {% else %}
-       <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Login" data-target="#login-form" data-toggle="modal" href="#">
-        Login
-       </a>
        {% endif %}
        <!-- /.lang menu -->
       </div>
@@ -527,7 +524,11 @@
                <input type="hidden" id="bmodel_year" value="{{item.model_year}}"/>
                <input type="hidden" id="btransmission" value="{{item.transmission}}"/>
                <input type="hidden" id="bfuel_type" value="{{item.fuel_type}}"/>
-               <input type="hidden" id="bimage" value="{{item.image.url}}"/>
+               {% for i in car.image.all %}
+             {% if forloop.first %}
+               <input type="hidden" id="bimage" value="{% get_media_prefix %}{{i.image}}"/>
+               {% endif %}
+              {% endfor %}
                <input type="hidden" id="bcondition" value="{{item.condition}}"/>
                <input type="hidden" id="buse_state" value="{{item.use_state}}"/>
                <input type="hidden" id="bprice" value="{{item.price}}"/>
