--- a/APP/templates/profile.html
+++ b/APP/templates/profile.html
@@ -85,9 +85,6 @@
           Profile
          </a>
          {% else %}
-         <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Login" data-target="#login-form" data-toggle="modal" href="#">
-          Login
-         </a>
          {% endif %}
          <button class="navbar-toggle" id="toggle-mainmenu" type="button">
           <span class="sr-only">
@@ -297,9 +294,6 @@
         Profile
        </a>
        {% else %}
-       <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Login" data-target="#login-form" data-toggle="modal" href="#">
-        Login
-       </a>
        {% endif %}
        <!-- /.lang menu -->
       </div>
@@ -407,6 +401,11 @@
          <li>
           <a class="dropdown-item active" href="profile">
            Profile
+          </a>
+         </li>
+         <li>
+          <a class="dropdown-item" href="bookmark">
+          My Bookmarks
           </a>
          </li>
          <li>
