--- a/APP/templates/confirmation.html
+++ b/APP/templates/confirmation.html
@@ -1,7 +1,8 @@
 {% load static %}
 
 <center>{% if message %}
-<img width="250" height="250"src="{% static 'images/new_logo.png' %}">
+  <h3>AUTOBUY</h3>
+<img width="250" height="250"src="{% static 'assets/img/logo.png' %}">
   <h2>{{message}}</h2>
   {% if user.is_authenticated %}
   <h2><a href="{% url 'APP:profile' %}">Click here to return to Site</a></h2>
