--- a/APP/templates/profile.html
+++ b/APP/templates/profile.html
@@ -440,7 +440,7 @@
             {% endif %}
            </div>
            <br>
-           <form method="POST">
+           <form method="POST" action="{% url 'APP:profile' %}" enctype="multipart/form-data">
              {% csrf_token %}
            <div class="row">
             <div class="col-sm-6">
