--- a/APP/templates/cars.html
+++ b/APP/templates/cars.html
@@ -456,9 +456,9 @@
         </nav>
        </div>
        <script>
-    /* When the user clicks on the button,
-    toggle between hiding and showing the dropdown content */
-    function showOutput () {
+      /* When the user clicks on the button,
+      toggle between hiding and showing the dropdown content */
+      function showOutput () {
       var value=document.getElementById("make").value;
       var value_2=document.getElementById("model").value;
       var value_5=document.getElementById("year_min").value;
@@ -482,51 +482,51 @@
       var paid="one";
       var queryString = "?first_check=" +paid  + "&use_state=" + value_4 + "&make=" + value + "&model=" + value_2 + "&year_min=" + value_5 + "&year_max=" + value_6 + "&price_min=" + value_7 + "&price_max=" + value_8 + "&fuel_type=" + value_9 + "&transmission=" + value_10 + "&condition=" + value_11 + "&keyword=" + value_12;
       window.location.href="search" + queryString;
-    }
+      }
 
-    function showOutput2 () {
-      var value=document.getElementById("auto").value;
+      function showOutput2 () {
 
-      var paid="true";
-      var queryString = "?search=" +paid  + "&category=" + value;
-      window.location.href="cars" + queryString;
-    }
-    function showOutput3 () {
-      var value=document.getElementById("truck").value;
 
       var paid="true";
-      var queryString = "?search=" +paid  + "&category=" + value;
+      var queryString = "?search=" +paid  + "&category=" + "auto";
       window.location.href="cars" + queryString;
-    }
-    function showOutput4 () {
-      var value=document.getElementById("tractor").value;
+      }
+      function showOutput3 () {
+
 
       var paid="true";
-      var queryString = "?search=" +paid  + "&category=" + value;
+      var queryString = "?search=" +paid  + "&category=" + "truck";
       window.location.href="cars" + queryString;
-    }
-    function showOutput5 () {
-      var value=document.getElementById("moped").value;
+      }
+      function showOutput4 () {
+
 
       var paid="true";
-      var queryString = "?search=" +paid  + "&category=" + value;
+      var queryString = "?search=" +paid  + "&category=" + "tractor";
       window.location.href="cars" + queryString;
-    }
-    function showOutput6 () {
-      var value=document.getElementById("bus").value;
+      }
+      function showOutput5 () {
+
 
       var paid="true";
-      var queryString = "?search=" +paid  + "&category=" + value;
+      var queryString = "?search=" +paid  + "&category=" + "moped";
       window.location.href="cars" + queryString;
-    }
-    function search () {
+      }
+      function showOutput6 () {
+
+
+      var paid="true";
+      var queryString = "?search=" +paid  + "&category=" + "bus";
+      window.location.href="cars" + queryString;
+      }
+      function search () {
       var value=document.getElementById("search").value;
 
       var paid="two";
       var queryString = "?second_check=" +paid  + "&keyword=" + value;
       window.location.href="search" + queryString;
-    }
-    </script>
+      }
+      </script>
        <!-- /. recent properties -->
       </div>
      </div>
