--- a/APP/templates/features.html
+++ b/APP/templates/features.html
@@ -331,38 +331,38 @@ window.location.href="search" + queryString;
 }
 
 function showOutput2 () {
-var value=document.getElementById("auto").value;
+
 
 var paid="true";
-var queryString = "?search=" +paid  + "&category=" + value;
+var queryString = "?search=" +paid  + "&category=" + "auto";
 window.location.href="cars" + queryString;
 }
 function showOutput3 () {
-var value=document.getElementById("truck").value;
+
 
 var paid="true";
-var queryString = "?search=" +paid  + "&category=" + value;
+var queryString = "?search=" +paid  + "&category=" + "truck";
 window.location.href="cars" + queryString;
 }
 function showOutput4 () {
-var value=document.getElementById("tractor").value;
+
 
 var paid="true";
-var queryString = "?search=" +paid  + "&category=" + value;
+var queryString = "?search=" +paid  + "&category=" + "tractor";
 window.location.href="cars" + queryString;
 }
 function showOutput5 () {
-var value=document.getElementById("moped").value;
+
 
 var paid="true";
-var queryString = "?search=" +paid  + "&category=" + value;
+var queryString = "?search=" +paid  + "&category=" + "moped";
 window.location.href="cars" + queryString;
 }
 function showOutput6 () {
-var value=document.getElementById("bus").value;
+
 
 var paid="true";
-var queryString = "?search=" +paid  + "&category=" + value;
+var queryString = "?search=" +paid  + "&category=" + "bus";
 window.location.href="cars" + queryString;
 }
 function search () {
