--- a/APP/templates/listing.html
+++ b/APP/templates/listing.html
@@ -337,38 +337,38 @@
   }
 
   function showOutput2 () {
-  var value=document.getElementById("auto").value;
+
 
   var paid="true";
-  var queryString = "?search=" +paid  + "&category=" + value;
+  var queryString = "?search=" +paid  + "&category=" + "auto";
   window.location.href="cars" + queryString;
   }
   function showOutput3 () {
-  var value=document.getElementById("truck").value;
+
 
   var paid="true";
-  var queryString = "?search=" +paid  + "&category=" + value;
+  var queryString = "?search=" +paid  + "&category=" + "truck";
   window.location.href="cars" + queryString;
   }
   function showOutput4 () {
-  var value=document.getElementById("tractor").value;
+
 
   var paid="true";
-  var queryString = "?search=" +paid  + "&category=" + value;
+  var queryString = "?search=" +paid  + "&category=" + "tractor";
   window.location.href="cars" + queryString;
   }
   function showOutput5 () {
-  var value=document.getElementById("moped").value;
+
 
   var paid="true";
-  var queryString = "?search=" +paid  + "&category=" + value;
+  var queryString = "?search=" +paid  + "&category=" + "moped";
   window.location.href="cars" + queryString;
   }
   function showOutput6 () {
-  var value=document.getElementById("bus").value;
+
 
   var paid="true";
-  var queryString = "?search=" +paid  + "&category=" + value;
+  var queryString = "?search=" +paid  + "&category=" + "bus";
   window.location.href="cars" + queryString;
   }
   function search () {
@@ -798,19 +798,13 @@ function closeForm() {
        <div class="widget-header property-btns clearfix">
         <ul class="clearfix sharing-buttons pull-left" style="padding-top: 0;">
          <li>
-          <a class="facebook" href="https://www.facebook.com/share.php?u=http://test.com&amp;title=" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
+          <a class="facebook" href="http://www.facebook.com/sharer.php?u=https://afriproperty.com.ng/{{object.get_absolute_url}}" target="{{object.get_absolute_url}}">
            <i class="fa fa-facebook fa-left">
            </i>
           </a>
          </li>
          <li>
-          <a class="google-plus" href="https://plus.google.com/share?url=http://test.com" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
-           <i class="fa fa-google-plus fa-left">
-           </i>
-          </a>
-         </li>
-         <li>
-          <a class="twitter" href="https://twitter.com/home?status=%20http://test.com" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
+          <a class="twitter"  href="https://twitter.com/share?url=https://afriproperty.com.ng/{{object.get_absolute_url}}" target="{{object.get_absolute_url}}">
            <i class="fa fa-twitter fa-left">
            </i>
           </a>
