--- a/APP/templates/page_image-gallery.html
+++ b/APP/templates/page_image-gallery.html
@@ -333,7 +333,7 @@
 
   var paid="one";
   var queryString = "?first_check=" +paid  + "&use_state=" + value_4 + "&make=" + value + "&model=" + value_2 + "&year_min=" + value_5 + "&year_max=" + value_6 + "&price_min=" + value_7 + "&price_max=" + value_8 + "&fuel_type=" + value_9 + "&transmission=" + value_10 + "&condition=" + value_11 + "&keyword=" + value_12;
-  window.location.href="search" + queryString;
+  window.location.href="{% url 'APP:search' %}" + queryString;
   }
 
   function showOutput2 () {
@@ -341,42 +341,42 @@
 
   var paid="true";
   var queryString = "?search=" +paid  + "&category=" + "auto";
-  window.location.href="cars" + queryString;
+  window.location.href="{% url 'APP:search' %}" + queryString;
   }
   function showOutput3 () {
 
 
   var paid="true";
   var queryString = "?search=" +paid  + "&category=" + "truck";
-  window.location.href="cars" + queryString;
+  window.location.href="{% url 'APP:search' %}" + queryString;
   }
   function showOutput4 () {
 
 
   var paid="true";
   var queryString = "?search=" +paid  + "&category=" + "tractor";
-  window.location.href="cars" + queryString;
+  window.location.href="{% url 'APP:search' %}" + queryString;
   }
   function showOutput5 () {
 
 
   var paid="true";
   var queryString = "?search=" +paid  + "&category=" + "moped";
-  window.location.href="cars" + queryString;
+  window.location.href="{% url 'APP:search' %}" + queryString;
   }
   function showOutput6 () {
 
 
   var paid="true";
   var queryString = "?search=" +paid  + "&category=" + "bus";
-  window.location.href="cars" + queryString;
+  window.location.href="{% url 'APP:search' %}" + queryString;
   }
   function search () {
   var value=document.getElementById("search").value;
 
   var paid="two";
   var queryString = "?second_check=" +paid  + "&keyword=" + value;
-  window.location.href="search" + queryString;
+  window.location.href="{% url 'APP:search' %}" + queryString;
   }
   </script>
   <!-- /.header-->
